# sp500-autoresearch

./: .gitignore  README.md  STRATEGY_SPEC.md  agent.py  daily_run.sh  evaluate.py  log_exp.sh  ml_run.py  ml_run2.py  ml_run3.py  ml_run4.py  ml_run5.py  ml_run6.py  ml_run7.py  ml_signal.py  prepare.py  program.md  pyproject.toml  refresh_data.py  run.py  run_stop_grid.py  setup.sh
