[project]
name = "sp500-autoresearch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "scipy>=1.13",
    "pandas-ta>=0.3.14b",
    "lxml>=5.0",
    "openpyxl>=3.1",
]
